k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vidp
  labels:
    app: vidp
    environment: development
