k8s/mongodb.yaml
# MongoDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: vidp
  labels:
    app: mongodb
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        tier: database
    spec:
      containers:
        - name: mongodb
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - mongosh
                - --username
                - "$(MONGO_INITDB_ROOT_USERNAME)"
                - --password
                - "$(MONGO_INITDB_ROOT_PASSWORD)"
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 45 # Augmenté pour laisser Mongo s'initialiser
            periodSeconds: 20
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - mongosh
                - --username
                - "$(MONGO_INITDB_ROOT_USERNAME)"
                - --password
                - "$(MONGO_INITDB_ROOT_PASSWORD)"
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10

      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: vidp
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongodb
